--- a/4.LUCENE.md
+++ b/4.LUCENE.md
@@ -25,6 +25,8 @@ multilingual: true
 * [2021-02-16-lucene系列(九)索引格式之doc文件](http://huyan.couplecoders.tech/lucene/%E6%90%9C%E7%B4%A2/%E7%B4%A2%E5%BC%95%E6%96%87%E4%BB%B6/2021/02/16/lucene%E7%B3%BB%E5%88%97(%E4%B9%9D)%E7%B4%A2%E5%BC%95%E6%A0%BC%E5%BC%8F%E4%B9%8Bdoc%E6%96%87%E4%BB%B6/)
 * [2021-03-02-lucene系列(十)索引格式之pos文件](http://huyan.couplecoders.tech/lucene/%E6%90%9C%E7%B4%A2/%E7%B4%A2%E5%BC%95%E6%96%87%E4%BB%B6/2021/03/02/lucene%E7%B3%BB%E5%88%97(%E5%8D%81)%E7%B4%A2%E5%BC%95%E6%A0%BC%E5%BC%8F%E4%B9%8Bpos%E6%96%87%E4%BB%B6/)
 * [2021-03-11-lucene系列(11)索引格式之pay文件](http://huyan.couplecoders.tech/lucene/%E6%90%9C%E7%B4%A2/%E7%B4%A2%E5%BC%95%E6%96%87%E4%BB%B6/2021/03/11/lucene%E7%B3%BB%E5%88%97(11)%E7%B4%A2%E5%BC%95%E6%A0%BC%E5%BC%8F%E4%B9%8Bpay%E6%96%87%E4%BB%B6/)
+* [2021-03-17-lucene系列(12)索引格式之nvm文件](http://huyan.couplecoders.tech/lucene/%E6%90%9C%E7%B4%A2%EF%BC%8C%E7%B4%A2%E5%BC%95%E6%96%87%E4%BB%B6/2021/03/17/lucene%E7%B3%BB%E5%88%97(12)%E7%B4%A2%E5%BC%95%E6%A0%BC%E5%BC%8F%E4%B9%8Bnvm%E6%96%87%E4%BB%B6/)
+* [2021-03-18-lucene系列(13)索引格式之nvd文件](http://huyan.couplecoders.tech/lucene/%E6%90%9C%E7%B4%A2%EF%BC%8C%E7%B4%A2%E5%BC%95%E6%96%87%E4%BB%B6/2021/03/18/lucene%E7%B3%BB%E5%88%97(13)%E7%B4%A2%E5%BC%95%E6%A0%BC%E5%BC%8F%E4%B9%8Bnvd%E6%96%87%E4%BB%B6/)
 
 # 工具类
 
