radix selector & bkd

--- a/_posts/lucene/util/2021-03-26-lucene系列(15)工具类之基数选择算法.md
+++ b/_posts/lucene/util/2021-03-26-lucene系列(15)工具类之基数选择算法.md
@@ -261,6 +261,15 @@ aaaaaaaaaaab
 
 这是我的猜测，我也不知道对不对，还在思考哈哈哈哈。
 
+## 思考题答案
+
+经过一番思考，我确认了这就是个bug.在Jira上提交给官方后，提交patch修复了这个bug.
+
+[Jira链接](https://issues.apache.org/jira/projects/LUCENE/issues/LUCENE-9887)
+
+[Fix-Commit链接](https://github.com/apache/lucene/commit/cce982146af785b0fb5ad4945e8671e1ff76743a)
+
+
 ## 参考文章
 
 https://zh.wikipedia.org/wiki/%E5%9F%BA%E6%95%B0%E6%8E%92%E5%BA%8F
