--- a/_drafts/lucene/2021-03-22-lucene系列(14)工具类之bkd树的源码实现.md
+++ b/_drafts/lucene/2021-03-22-lucene系列(14)工具类之bkd树的源码实现.md
@@ -12,7 +12,109 @@ tags:
 
 上一篇文章讲了bkd树的基本原理，这次看一下Lucene对BKD树的实现.
 
+bkd树在lucene中的实现，都在`org.apache.lucene.util.bkd`中,其中又包含了下面几个类.
 
+![2021-04-01-21-41-45](http://img.couplecoders.tech/2021-04-01-21-41-45.png)
+
+## 接口
+
+为了看懂这块代码，让我们先来介绍下三个接口.
+
+#### org.apache.lucene.util.bkd.PointValue
+
+![2021-04-01-21-45-01](http://img.couplecoders.tech/2021-04-01-21-45-01.png)
+
+这个接口，用来描述一个`多维的点`. 并且提供了数据的获取方式:
+* 点的数据的字节数组
+* 这个点对应的docId
+* 这个点和docId打包在一起的数据
+
+#### org.apache.lucene.util.bkd.PointWriter
+
+![2021-04-01-21-51-04](http://img.couplecoders.tech/2021-04-01-21-51-04.png)
+
+这个接口，是`点的写入`的抽象接口，可以通过他的实现类，向(内存/磁盘)等存储介质写入多个点.
+
+* append: 追加一个点，存储点的值和对应的docId
+* count: 写入的point的总数
+* getReader: 提供一个读取之前的所有的point的遍历器.
+
+#### org.apache.lucene.util.bkd.PointReader
+
+```java
+public interface PointReader extends Closeable {
+
+  /** Returns false once iteration is done, else true. */
+  // 是否还有下一个值呢???
+  boolean next() throws IOException;
+
+  /** Sets the packed value in the provided ByteRef */
+  // 把打包好的值，放进到给定的容器里，　反正就是迭代器呗，能知道下一个还有没有，拿到当前的值
+  PointValue pointValue();
+
+}
+
+```
+这个接口，提供了`点的读取`抽象接口，他的实现类可以从(内存/磁盘)上读取一系列的点.
+
+* next: 是否还有下一个
+* pointValue: 读取下一个点的数据
+
+## bkd树写入
+
+BKD树的写入过程，是在`BKDWriter`中实现的. 为了文章的简洁，这里就不一一介绍成员变量，构造方法等等给了。直接按照写入流程开始学习。
+
+首先，我们都知道使用BKD树的目的是什么，那就是对给定的数据，首先构建一棵树，来支持快速的查询，之后再说支持树的更新的事情。
+
+既然是添加数据，构建一棵树，那么就从`add`方法开始看起把。
+
+### add方法
+
+流程图:
+
+![2021-04-01-22-03-56](http://img.couplecoders.tech/2021-04-01-22-03-56.png)
+
+代码：
+
+```java
+  public void add(byte[] packedValue, int docID) throws IOException {
+    // 数据check
+    if (packedValue.length != config.packedBytesLength) {
+      throw new IllegalArgumentException("packedValue should be length=" + config.packedBytesLength + " (got: " + packedValue.length + ")");
+    }
+    if (pointCount >= totalPointCount) {
+      throw new IllegalStateException("totalPointCount=" + totalPointCount + " was passed when we were created, but we just hit " + (pointCount + 1) + " values");
+    }
+    // 初始化
+    if (pointCount == 0) {
+      initPointWriter();
+      System.arraycopy(packedValue, 0, minPackedValue, 0, config.packedIndexBytesLength);
+      System.arraycopy(packedValue, 0, maxPackedValue, 0, config.packedIndexBytesLength);
+    } else {
+      // 每个维度进行写入
+      for (int dim = 0; dim < config.numIndexDims; dim++) {
+        int offset = dim * config.bytesPerDim;
+
+        // 进行最大最小值的写入
+        if (FutureArrays.compareUnsigned(packedValue, offset, offset + config.bytesPerDim, minPackedValue, offset, offset + config.bytesPerDim) < 0) {
+          System.arraycopy(packedValue, offset, minPackedValue, offset, config.bytesPerDim);
+        } else if (FutureArrays.compareUnsigned(packedValue, offset, offset + config.bytesPerDim, maxPackedValue, offset, offset + config.bytesPerDim) > 0) {
+          System.arraycopy(packedValue, offset, maxPackedValue, offset, config.bytesPerDim);
+        }
+      }
+    }
+    // 追加当前点
+    pointWriter.append(packedValue, docID);
+    pointCount++;
+    // 记录docId
+    docsSeen.set(docID);
+  }
+
+```
+
+可以看出来，add方法其实比较简单，甚至可以单纯的理解为只是对`PointWriter`进行了append操作而已。
+
+这里的`PointWriter`,也就是之前介绍的点的写入接口，有两种实现方式，
 
 
 ## 参考文章
