--- a/4.LUCENE.md
+++ b/4.LUCENE.md
@@ -27,7 +27,9 @@ multilingual: true
 * [2021-03-11-lucene系列(11)索引格式之pay文件](http://huyan.couplecoders.tech/lucene/%E6%90%9C%E7%B4%A2/%E7%B4%A2%E5%BC%95%E6%96%87%E4%BB%B6/2021/03/11/lucene%E7%B3%BB%E5%88%97(11)%E7%B4%A2%E5%BC%95%E6%A0%BC%E5%BC%8F%E4%B9%8Bpay%E6%96%87%E4%BB%B6/)
 * [2021-03-17-lucene系列(12)索引格式之nvm文件](http://huyan.couplecoders.tech/lucene/%E6%90%9C%E7%B4%A2%EF%BC%8C%E7%B4%A2%E5%BC%95%E6%96%87%E4%BB%B6/2021/03/17/lucene%E7%B3%BB%E5%88%97(12)%E7%B4%A2%E5%BC%95%E6%A0%BC%E5%BC%8F%E4%B9%8Bnvm%E6%96%87%E4%BB%B6/)
 * [2021-03-18-lucene系列(13)索引格式之nvd文件](http://huyan.couplecoders.tech/lucene/%E6%90%9C%E7%B4%A2%EF%BC%8C%E7%B4%A2%E5%BC%95%E6%96%87%E4%BB%B6/2021/03/18/lucene%E7%B3%BB%E5%88%97(13)%E7%B4%A2%E5%BC%95%E6%A0%BC%E5%BC%8F%E4%B9%8Bnvd%E6%96%87%E4%BB%B6/)
-* 
+* [2021-04-02-lucene系列(18)索引格式之kdm文件]()
+* [2021-04-03-lucene系列(19)索引格式之kdi文件]()
+* [2021-04-04-lucene系列(20)索引格式之kdd文件]()
 
 # 工具类
 
