--- a/_posts/lucene/index/2021-03-17-lucene系列(12)索引格式之nvm文件.md
+++ b/_posts/lucene/index/2021-03-17-lucene系列(12)索引格式之nvm文件.md
@@ -15,7 +15,7 @@ tags:
 
 nvm 与 nvd 文件配合存储了索引中的标准化相关信息。其中 nvm 存储了元数据，nvd 文件存储了标准化后的值及相关 docId 信息。
 
-## .pay 文件整体结构
+## .nvm 文件整体结构
 
 ![2021-03-18-11-52-53](http://img.couplecoders.tech/2021-03-18-11-52-53.png)
 
