--- a/_drafts/算法/2021-06-27-详解二分查找.md
+++ b/_drafts/算法/2021-06-27-详解二分查找.md
@@ -18,7 +18,7 @@ tags:
 def binary_search(nums, target):
     l = 0
     r = len(nums) - 1 # right
-    while l < r: # 结束条件
+    while l < r: # 循环条件
         m = l + ((r - l) >> 1) # 求取中值
         if target == nums[m]:
             # 相等
@@ -32,11 +32,9 @@ def binary_search(nums, target):
 几个关键点:
 
 * 搜索区间的选取
-* 结束条件
+* 循环条件
 * 中间值的求取
-* 相等时做什么
-* 大于做什么
-* 小于做什么
+* 左右边界更新
 * 返回值
 
 # 最基础的二分查找
@@ -60,12 +58,12 @@ def binary_search(nums, target):
 
 ```
 
-针对上面的7个问题. 看一下我们做了什么:
+针对上面的几个关键点. 看一下我们做了什么:
 
 
 * 搜索区间的选取:
 
-  left = 0, right = len(nums) - 1. 也就是说, 我们选取了`[0, length-1]`的闭合区间进行搜索. 能改吗? 当然,后面说.
+  left = 0, right = len(nums) - 1. 也就是说, 我们选取了`[0, length-1]`的闭合区间进行搜索. 能改吗? 当然, 但是我不想改.
 * 结束条件
 
   结束条件两个: 
@@ -76,20 +74,59 @@ def binary_search(nums, target):
 * 中间值的求取
 
     常见求法, 注意下溢出问题即可.
-* 相等时做什么
-
-    找到目标值了,返回
-* 大于做什么
+* 左边界更新 
 
     当目标值,大于中间值.也就是说, 我们要取右半边的区间进行搜索. 由于mid已经比较过了,不需要了. 因此取`[mid + 1, right]`. 也就是` left = mid + 1`.
-* 小于做什么
+* 右边界更新
     同理,要减一.
 * 返回值
+    如果找到目标值，返回.
     如果跳出循环,还没找到, 返回-1.
 
 有问题了, 我比较皮,在第一步`right = len(nums) - 1` 的时候, 我不想减1. 可以不?
 
 当然可以. 那就是选择了左闭右开的区间进行搜索. 对应的还要调整循环条件. ` [3, 3)` 已经是一个空区间了.因此可以直接结束, 对应的循环条件改为:`left < right `即可. 如果不修改呢? 在空区间内, 死循环呗, 找不到值.左右边界也不变, 死循环.
+
+# 寻找可重复数组中最左侧的值
+
+这是很常见的一个变种. 数组仍然是排序的升序数组，但是可重复，需要找到最左的目标值的下标.
+
+要求: 如果有，找到最左侧的下标. 如果没有返回-1.
+
+```python
+def binary_search_left(nums, target):
+    """
+    :type nums: List[int]
+    :rtype: int
+    """
+    l = 0
+    r = len(nums)
+    while l < r:
+        m = l + ((r - l) >> 1)
+        if target == nums[m]:
+            r = m
+        elif target < nums[m]:
+            r = m
+        elif target > nums[m]:
+            l = m + 1
+    if l == len(nums):
+        return -1
+    if nums[l] == target:
+        return l
+    return -1
+```
+
+我的思路(基于普通二分):
+
+1. 要找最左侧的值，那么当查找到目标值时，不能直接返回. 要当做: **当前值大于目标值** 来处理.
+2. 为了提防上一步处理时,已经找到了最左侧的值，但是 由于`r = m-1`操作，直接扔出了区间之外，因此`r=m`. 每次保留上次比较的值.
+3. 由于`r=m`, 因此按照之前的分析，结束条件应该是`l == r`. 也就是说循环条件是: `l < r`. 对应的扫描区间是左闭右开. 
+
+
+# 寻找可重复数组中最右侧的值
+
+
+
 
 
 # 其他变种
