--- a/_drafts/算法/2021-06-27-详解二分查找.md
+++ b/_drafts/算法/2021-06-27-详解二分查找.md
@@ -8,7 +8,7 @@ tags:
 
 最近稍微闲了点, 继续学习. 先开个二分法练练手.再去学Lucene.
 
-# 模板
+## 模板
 
 二分法, 简单又复杂. 原理大家基本上清楚. 不在赘述.
 
@@ -37,7 +37,13 @@ def binary_search(nums, target):
 * 左右边界更新
 * 返回值
 
-# 最基础的二分查找
+二分及二分的各种变种, 无非就是上面这些条件的所有可能的排列组合而已. 
+
+注意: <font color="red">二分有多种代码的写法, 学习思想,按照自己的习惯去写. 下文只提供其中一种思路.</font>
+
+我的思路是: <font color="red">我喜欢左闭右闭的区间,且循环条件是`left<=right`.</font>
+
+## 最基础的二分查找
 
 最基础的题型. leetcode第704题. [二分查找](https://leetcode-cn.com/problems/binary-search/)
 
@@ -87,7 +93,7 @@ def binary_search(nums, target):
 
 当然可以. 那就是选择了左闭右开的区间进行搜索. 对应的还要调整循环条件. ` [3, 3)` 已经是一个空区间了.因此可以直接结束, 对应的循环条件改为:`left < right `即可. 如果不修改呢? 在空区间内, 死循环呗, 找不到值.左右边界也不变, 死循环.
 
-# 寻找可重复数组中最左侧的值
+## 寻找可重复数组中最左侧的值
 
 这是很常见的一个变种. 数组仍然是排序的升序数组，但是可重复，需要找到最左的目标值的下标.
 
@@ -95,18 +101,14 @@ def binary_search(nums, target):
 
 ```python
 def binary_search_left(nums, target):
-    """
-    :type nums: List[int]
-    :rtype: int
-    """
     l = 0
-    r = len(nums)
-    while l < r:
+    r = len(nums) - 1
+    while l <= r:
         m = l + ((r - l) >> 1)
         if target == nums[m]:
-            r = m
+            r = m - 1
         elif target < nums[m]:
-            r = m
+            r = m - 1
         elif target > nums[m]:
             l = m + 1
     if l == len(nums):
@@ -116,23 +118,111 @@ def binary_search_left(nums, target):
     return -1
 ```
 
+
 我的思路(基于普通二分):
 
-1. 要找最左侧的值，那么当查找到目标值时，不能直接返回. 要当做: **当前值大于目标值** 来处理.
-2. 为了提防上一步处理时,已经找到了最左侧的值，但是 由于`r = m-1`操作，直接扔出了区间之外，因此`r=m`. 每次保留上次比较的值.
-3. 由于`r=m`, 因此按照之前的分析，结束条件应该是`l == r`. 也就是说循环条件是: `l < r`. 对应的扫描区间是左闭右开. 
+1. 搜索区间和循环条件按照自己喜欢的设置,之后去推导其他的变量.
+2. 求中值.
+3. 因为要搜索目标值的左边界,因此当`target == nums[m]`时,不进行返回,而是收缩右边界,继续寻找.
+4. 右边界的更新,采用了`r=m-1`, 因为循环条件是`l<=r`, 如果右边界不变的话,在只有一个值的区间上, 会造成死循环.
+5. 左边界的更新没有异议, 直接+1即可.
+6. 结束时, 返回什么呢? 结束的上一步,有两个可能. 
+
+    * 区间只有一个值, 如果`>=`目标值,左边界不更新, 如果`<`目标值, 左边界+1. 两种操作,左边界都是在最可能是最左侧值的地方.
+    * 区间有两个值, 且左侧值大于等于目标值,此时右边界更新, 左边界仍然在最可能是目标值的地方.
+
+因此循环结束后, 检查left指针的位置, 如果是目标值,则返回下标.它就是最左侧值. 如果不是目标值, 返回-1.
+
+## 寻找可重复数组中最右侧的值
+
+```python
+def binary_search_right(nums, target):
+    l = 0
+    r = len(nums) - 1
+    while l <= r:
+        m = l + ((r - l) >> 1)
+        if target == nums[m]:
+            l = m + 1
+        elif target < nums[m]:
+            r = m - 1
+        elif target > nums[m]:
+            l = m + 1
+    if nums[r] == target:
+        return r
+    return -1
+```
+
+我的思路(基于普通二分):
+
+基本上就是最左侧的一个镜像翻转. 不再赘述.
 
 
-# 寻找可重复数组中最右侧的值
+我这个思路, 和网上很多通过调整循环条件来寻找边界值的不同, 更倾向于研究结束时左右指针的位置, 通过控制返回值来达成目标. 也不知道算好酸怀.
+
+## 寻找极值
+
+这是除了寻找边界值之外的另一个变种. 可以在没有目标值的前提下, 找到数组中的某些特定极值. 比如:
+
+### leetcode [852. 山脉数组的峰顶索引](https://leetcode-cn.com/problems/peak-index-in-a-mountain-array/)
+
+本质上是: **在一个先升后降的数组里,找到最大的值**
+
+```python
+class Solution(object):
+    def peakIndexInMountainArray(self, arr):
+        """
+        :type arr: List[int]
+        :rtype: int
+        """
+        left = 0
+        right = len(arr) - 1
+        while left <= right:
+            pivot = left + ((right - left) >> 1)
+
+            mid_v = arr[pivot]
+
+            if left < pivot < right and mid_v > arr[pivot - 1] and mid_v > arr[pivot + 1]:
+                return pivot
+            mid_r = arr[pivot + 1]
+            if mid_v > mid_r:
+                right = pivot
+            elif mid_v < mid_r:
+                left = pivot
+        return left
+```
+
+这里最主要的变化是, 每次的`中间值与目标值`的比较,变成了`中间值与中间值左右两侧`的比较, 以此来判断数组的趋势. 如果当前是下降,则向左收缩, 如果当前是上升, 向右收缩. 其他区别不大.
 
 
+### leetcode [153. 寻找旋转排序数组中的最小值](https://leetcode-cn.com/problems/find-minimum-in-rotated-sorted-array/)
+
+本质上是: **两段上升数组, 且第二段的最大值小于第一段的最大值,找断点**.
+
+```python
+class Solution(object):
+    def findMin(self, nums):
+        """
+        :type nums: List[int]
+        :rtype: int
+        """
+        l = 0
+        r = len(nums) - 1
+        while l < r:
+            m = l + ((r - l) >> 1)
+            if nums[m] < nums[r]:
+                r = m
+            else:
+                l = m + 1
+        return nums[l]
+```
 
 
+这里最主要的变化是, 每次的`中间值与目标值`的比较,变成了`中间值最右侧值`的比较, 以此来判断当前处于第几段区间中. 如果在第二段,则向左收缩. 如果在第一段, 则向右收缩.
 
-# 其他变种
 
+## 更多例题
 
-## 寻找插入位置
+### 35.寻找插入位置 -> 普通二分调整返回值
 
 leetcode 第35题. [搜索插入位置](https://leetcode-cn.com/problems/search-insert-position/)
 
@@ -164,10 +254,89 @@ leetcode 第35题. [搜索插入位置](https://leetcode-cn.com/problems/search-
 
 搜索结束时. 区间为: `[a+1, a]`. 此时`a+1`就是因为`a`小于目标值.才进行的+1操作. 因此直接返回`left=a+1`即可.
 
+### 374.猜数字大小 -> 普通二分,抽象了下二分的概念
 
-## 
+[374.猜数字大小](https://leetcode-cn.com/problems/guess-number-higher-or-lower/)
+
+```python
+class Solution(object):
+    def guessNumber(self, n):
+        """
+        :type n: int
+        :rtype: int
+        """
+        left = 0
+        right = n
+        while left <= right:
+            mid = left + ((right - left) >> 1)
+            res = guess(mid)
+            if res == 0 :
+                return mid
+            elif res == -1:
+                right =  mid - 1
+            elif res == 1:
+                left = mid + 1
+        return left
+```
+
+### 367.有效的完全平方数 -> 普通二分
+
+[367.有效的完全平方数](https://leetcode-cn.com/problems/valid-perfect-square/)
+
+```python
+class Solution(object):
+    def isPerfectSquare(self, num):
+        """
+        :type num: int
+        :rtype: bool
+        """
+        if num == 1:
+            return True
+        left = 0
+        right = int(num / 2)
+        while left <= right:
+            mid = left + ((right - left) >> 1)
+            mid2 = mid * mid
+            if mid2 == num:
+                return True
+            elif mid2 < num:
+                left = mid + 1
+            elif mid2 > num:
+                right = mid - 1
+        return False
+```
+
+普通二分,注意下特殊值处理.
 
 
+
+
+### 69. x 的平方根 -> 普通二分
+
+[69. x 的平方根](https://leetcode-cn.com/problems/sqrtx/)
+
+```python
+class Solution(object):
+    def mySqrt(self, x):
+        if x == 1:
+            return 1
+        left = 0
+        right = int(x / 2)
+        while left <= right:
+            mid = left + ((right - left) >> 1)
+            mid2 = mid * mid
+            if mid2 == x:
+                return mid
+            elif mid2 < x:
+                left = mid + 1
+            elif mid2 > x:
+                right = mid - 1
+        return left - 1
+
+```
+
+
+### 
 
 ## 参考文章
 
