--- a/_posts/杂项/2021-07-17-北京摩托车增驾及购车全流程记录.md
+++ b/_posts/杂项/2021-07-17-北京摩托车增驾及购车全流程记录.md
@@ -92,6 +92,31 @@ tags:
 目前在等车中~ 有新情况就更新. 没有的话就是顺利到车骑着玩耍咯.
 
 
+20210911更新:
+
+更新下部分花费，想入坑的朋友参考:
+
+车落地:
+
+26000: 包含车，购置税，交强险，上牌，验车费等等.
+1000: 办北京郊区居住证.
+1150: 100w的三者险.
+
+加装:
+
+护杠: 360 含安装.
+折叠靠背: 530购入, 80块工时费.
+滑动离合: 京东299购入, 100工时费.
+
+护具:
+
+两个头盔: 2300.
+
+
+共: 31810.
+
+---
+
 
 <br>
 
