--- a/_posts/java/juc/2021-09-28-(juc系列)AQS源码学习笔记.md
+++ b/_posts/java/juc/2021-09-28-(juc系列)AQS源码学习笔记.md
@@ -134,7 +134,7 @@ AQS的方法可太多了. 先看一下对外提供的API方法.
 
 ### acquire(int arg)
 
-# 以ReentrantLock为例. 补充他的实现原理
+独占式应用，典型的就是`ReentrantLock`. [ReentrantLock源码学习](http://huyan.couplecoders.tech/java/juc/reentrantlock/2021/09/28/(juc%E7%B3%BB%E5%88%97)ReentrantLock%E6%BA%90%E7%A0%81%E5%AD%A6%E4%B9%A0/)
 
 独占模式的加锁代码.
 
@@ -452,7 +452,7 @@ private void unparkSuccessor(Node node){
 
 ## acquireShared(int arg)
 
-# 以读写锁为例，补充一下实现.
+共享锁的相关实现，可以查看`CountDownLatch`的相关代码. [CountDownLatch源码解析](http://huyan.couplecoders.tech/java/juc/countdownlatch/2021/09/30/(juc%E7%B3%BB%E5%88%97)CountDownLatch%E6%BA%90%E7%A0%81%E9%98%85%E8%AF%BB/)
 
 共享模式的获取锁.忽略中断.
 
