--- a/_posts/java/juc/2021-09-28-(juc系列)AQS源码学习笔记.md
+++ b/_posts/java/juc/2021-09-28-(juc系列)AQS源码学习笔记.md
@@ -1,10 +1,10 @@
 ---
-layout: post category: [Java, JUC]
+layout: post
+category: [Java, JUC, AQS]
 tags:
-
-- Java
-- JUC
-
+  - Java
+  - JUC
+  - AQS
 ---
 
 ## 前言
