--- a/_drafts/com.util.concurent并发包/2021-10-19-Java中的阻塞队列源码学习.md
+++ b/_drafts/com.util.concurent并发包/2021-10-19-Java中的阻塞队列源码学习.md
@@ -555,6 +555,440 @@ public class ArrayBlockingQueue<E> extends AbstractQueue<E>
 
 阻塞功能由锁带的`Condition`实现，两个`Condition`分别负责`队列不为空``队列没有满`，分别使生产者和消费者阻塞，及条件满足后的唤醒功能.
 
+## LinkedBlockingQueue 
+
+### 官方注释翻译
+
+一个用链表实现的可以是有界的阻塞队列. 元素排序为FIFO.
+
+队头元素是在队列中时间最长的元素，队尾元素是在队列中时间最短的元素. 
+
+新的元素插入到队列尾部，获取操作从队头获取元素.
+
+链表实现的队列通常比数组实现的有更高的吞吐量，但是在高并发情况下，性能更加不可预测.
+
+通常的容量边界提供了一个扩容队列的操作， 默认情况下，容量是: Integer.MAX_VALUE. 链表的节点在每一次插入操作时动态创建，除非这次插入会超过队列容量.
+
+这个类和他的迭代器实现了`Collection`和`Iterator`接口的所有可选方法.这个类也是Java集合框架的一部分.
+
+### 源码
+
+#### 定义
+
+```java
+public class LinkedBlockingQueue<E> extends AbstractQueue<E>
+implements BlockingQueue<E>, java.io.Serializable {
+```
+
+实现了基础的`AbstractQueue`接口，因此具有所有的队列常用方法，同时实现了`BlockingQueue`接口，也具有阻塞队列的所有特性.
+
+
+#### 链表节点定义
+
+```java
+    static class Node<E> {
+        E item;
+
+        /**
+         * One of:
+         * - the real successor Node
+         * - this Node, meaning the successor is head.next
+         * - null, meaning there is no successor (this is the last node)
+         */
+        Node<E> next;
+
+        Node(E x) { item = x; }
+    }
+```
+
+比较简单的一个定义, 持有当前的元素及下一个节点的指针. 
+
+这个指针有三种情况:
+
+* Node 一个真实的节点
+* 当前节点， 意味着当前节点的下一个，是`head.next`.
+* null 意味着没有后继节点了. 当前节点是最后一个节点.
+
+#### 属性
+
+```java
+// 初始设定的容量
+private final int capacity;
+
+// 当前数量
+private final AtomicInteger count = new AtomicInteger();
+
+/**
+ * Head of linked list.
+ * Invariant: head.item == null
+ */
+// 头结点，头结点的item一定为null
+transient Node<E> head;
+
+/**
+ * Tail of linked list.
+ * Invariant: last.next == null
+ */
+// 尾节点，尾节点的next指针一定是null
+private transient Node<E> last;
+
+/** Lock held by take, poll, etc */
+// 获取元素时的锁
+private final ReentrantLock takeLock = new ReentrantLock();
+
+/** Wait queue for waiting takes */
+// 不为空的等待条件
+private final Condition notEmpty = takeLock.newCondition();
+
+/** Lock held by put, offer, etc */
+// 写入元素时的锁
+private final ReentrantLock putLock = new ReentrantLock();
+
+/** Wait queue for waiting puts */
+// 队列有空闲的等待条件
+private final Condition notFull = putLock.newCondition();
+```
+
+* 首先保存了最大容量与当前容量，用来实现有界队列。
+* 其次保存了头结点和尾节点，用来实现链表保存实际的元素
+* 最后持有两把锁，分别锁队头和队尾，用来保证线程安全
+* 每把锁有对应的等待条件，用来休眠/唤醒线程，用来实现线程阻塞
+
+#### 构造方法
+
+```java
+
+    public LinkedBlockingQueue() {
+        this(Integer.MAX_VALUE);
+    }
+
+    public LinkedBlockingQueue(int capacity) {
+        if (capacity <= 0) throw new IllegalArgumentException();
+        this.capacity = capacity;
+        last = head = new Node<E>(null);
+    }
+
+    public LinkedBlockingQueue(Collection<? extends E> c) {
+        this(Integer.MAX_VALUE);
+        final ReentrantLock putLock = this.putLock;
+        putLock.lock(); // Never contended, but necessary for visibility
+        try {
+            int n = 0;
+            for (E e : c) {
+                if (e == null)
+                    throw new NullPointerException();
+                if (n == capacity)
+                    throw new IllegalStateException("Queue full");
+                enqueue(new Node<E>(e));
+                ++n;
+            }
+            count.set(n);
+        } finally {
+            putLock.unlock();
+        }
+    }
+
+```
+
+提供了三个构造方法，可以指定容量，然后初始化头结点.
+
+此外还支持将给定的集合初始化进队列.
+
+#### 入队操作
+
+##### add 抛出异常
+
+调用的`AbstractQueue`的方法，如果队列满了直接抛出异常.
+
+##### offer(e) 返回true/false
+
+```java
+    public boolean offer(E e) {
+        if (e == null) throw new NullPointerException();
+        // 当前数量
+        final AtomicInteger count = this.count;
+        // 如果队列满了，返回false
+        if (count.get() == capacity)
+            return false;
+        final int c;
+        // 初始化当前节点
+        final Node<E> node = new Node<E>(e);
+        // 写入锁的加锁
+        final ReentrantLock putLock = this.putLock;
+        putLock.lock();
+        try {
+            // 加锁后再次检查一下容量
+            if (count.get() == capacity)
+                return false;
+            // 入队操作
+            enqueue(node);
+            // 数量+1
+            c = count.getAndIncrement();
+            // 如果还有空闲容量，唤醒等待的其他生产者
+            if (c + 1 < capacity)
+                notFull.signal();
+        } finally {
+            putLock.unlock();
+        }
+        // 如果当前写入前，容量为0，也就是当前节点是给空队列放入的第一个元素，唤醒等待的消费者
+        if (c == 0)
+            signalNotEmpty();
+        return true;
+    }
+```
+
+两次检查队列容量，如果超出限制，就返回false。否则的话调用入队操作. 此外，如果当前元素，是给空队列放入的第一个元素，唤醒其他消费者，告诉他们，队列不为空了.
+
+```java
+    private void enqueue(Node<E> node) {
+        // assert putLock.isHeldByCurrentThread();
+        // assert last.next == null;
+        // 将当前节点链接在最后一个节点的下一个
+        last = last.next = node;
+    }
+```
+
+这是核心的元素入队操作，比较简单，只是将当前元素链接在当前链表的尾部即可.
+
+##### put 阻塞
+
+```java
+
+    public void put(E e) throws InterruptedException {
+        if (e == null) throw new NullPointerException();
+        final int c;
+        // 创建当前节点
+        final Node<E> node = new Node<E>(e);
+        final ReentrantLock putLock = this.putLock;
+        final AtomicInteger count = this.count;
+        // 写入的锁加锁
+        putLock.lockInterruptibly();
+        try {
+            /*
+             * Note that count is used in wait guard even though it is
+             * not protected by lock. This works because count can
+             * only decrease at this point (all other puts are shut
+             * out by lock), and we (or some other waiting put) are
+             * signalled if it ever changes from capacity. Similarly
+             * for all other uses of count in other wait guards.
+             */
+            // 如果队列满了，自旋且等待
+            while (count.get() == capacity) {
+                notFull.await();
+            }
+            // 被唤醒后，说明队列不满了，执行入队操作
+            enqueue(node);
+            c = count.getAndIncrement();
+            // 如果队列不满，协助唤醒其他生产者
+            if (c + 1 < capacity)
+                notFull.signal();
+        } finally {
+            putLock.unlock();
+        }
+        // 如果当前元素是第一个元素，唤醒其他的消费者
+        if (c == 0)
+            signalNotEmpty();
+    }
+```
+
+总体和`offer`很相似，只是在发现队列已经满了的时候，不是返回false。而是在`notFull`条件上进行等待，等待别的线程唤醒. 唤醒后就可以继续入队了。
+
+
+##### offer(e,time,unit)
+
+```java
+
+    public boolean offer(E e, long timeout, TimeUnit unit)
+        throws InterruptedException {
+
+        if (e == null) throw new NullPointerException();
+        long nanos = unit.toNanos(timeout);
+        final int c;
+        final ReentrantLock putLock = this.putLock;
+        final AtomicInteger count = this.count;
+        putLock.lockInterruptibly();
+        try {
+            while (count.get() == capacity) {
+                if (nanos <= 0L)
+                    return false;
+                nanos = notFull.awaitNanos(nanos);
+            }
+            enqueue(new Node<E>(e));
+            c = count.getAndIncrement();
+            if (c + 1 < capacity)
+                notFull.signal();
+        } finally {
+            putLock.unlock();
+        }
+        if (c == 0)
+            signalNotEmpty();
+        return true;
+    }
+```
+
+和`put`相似，只是在返现队列满的情况下，如果已经超时，就返回false，如果没有超时，就让当前线程休眠给定的毫秒数，再次判断是否能够入队元素.
+
+#### 出队操作
+
+```java
+
+    public E poll() {
+    // 当前数量
+        final AtomicInteger count = this.count;
+        // 如果当前为空，返回null.
+        if (count.get() == 0)
+            return null;
+        final E x;
+        final int c;
+        final ReentrantLock takeLock = this.takeLock;
+        // 读锁加锁
+        takeLock.lock();
+        try {
+            // 再次检查队列是否为空
+            if (count.get() == 0)
+                return null;
+            // 执行出队操作
+            x = dequeue();
+            c = count.getAndDecrement();
+            // 如果当前元素不是队列中的唯一一个元素，就协助唤醒消费者
+            if (c > 1)
+                notEmpty.signal();
+        } finally {
+            takeLock.unlock();
+        }
+        // 如果出队前，队列是满的，那么出队后，队列不满，唤醒其他生产者
+        if (c == capacity)
+            signalNotFull();
+        return x;
+    }
+```
+
+如果队列为空，返回null的出队方法.
+
+首先检查数组容量，为空则返回null。之后对读锁进行加锁，再次检查容量.
+
+如果容量不为空，执行核心出队操作。 出队后，如果队列中还有元素，就协助唤醒消费者.
+
+如果出队前，队列是满的，那么当前元素是满的队列出队的第一个元素，唤醒其他生产者.
+
+```java
+
+    private E dequeue() {
+        // assert takeLock.isHeldByCurrentThread();
+        // assert head.item == null
+            // 链表的头结点
+        Node<E> h = head;
+        // 链表的第一个节点
+        Node<E> first = h.next;
+        
+        h.next = h; // help GC
+        // 头结点改成first
+        head = first;
+        E x = first.item;
+        first.item = null;
+        // 返回节点
+        return x;
+    }
+```
+
+链表的核心出队方法, 比入队复杂了一点. 
+
+将头结点(空的占位节点)指向第一个真实节点，将真实节点的元素返回即可.
+
+##### take() 阻塞
+
+```java
+
+    public E take() throws InterruptedException {
+        final E x;
+        final int c;
+        final AtomicInteger count = this.count;
+        final ReentrantLock takeLock = this.takeLock;
+        takeLock.lockInterruptibly();
+        try {
+            while (count.get() == 0) {
+                notEmpty.await();
+            }
+            x = dequeue();
+            c = count.getAndDecrement();
+            if (c > 1)
+                notEmpty.signal();
+        } finally {
+            takeLock.unlock();
+        }
+        if (c == capacity)
+            signalNotFull();
+        return x;
+    }
+```
+
+首先加锁，然后判断队列是否为空，如果为空，就在`notEmpty`条件上阻塞，等待唤醒.
+
+被唤醒后，说明当前队列不为空，执行出队操作.
+
+如果出队后，队列不为空，协助唤醒消费者.
+如果出队前，队列是满的，那么就唤醒生产者.
+
+##### poll(time,unit)
+
+```java
+
+    public E poll(long timeout, TimeUnit unit) throws InterruptedException {
+        final E x;
+        final int c;
+        long nanos = unit.toNanos(timeout);
+        final AtomicInteger count = this.count;
+        final ReentrantLock takeLock = this.takeLock;
+        takeLock.lockInterruptibly();
+        try {
+            while (count.get() == 0) {
+                if (nanos <= 0L)
+                    return null;
+                nanos = notEmpty.awaitNanos(nanos);
+            }
+            x = dequeue();
+            c = count.getAndDecrement();
+            if (c > 1)
+                notEmpty.signal();
+        } finally {
+            takeLock.unlock();
+        }
+        if (c == capacity)
+            signalNotFull();
+        return x;
+    }
+
+```
+
+和`take`方法很相似，只是在发现队列为空时，需要判断是否超时，如果超时，返回null。如果没有超时，就让当前线程阻塞给定的时间，而不是无限的阻塞.
+
+
+#### 查看方法
+
+* size 返回当前数量
+* remainingCapacity 剩余容量
+* peek 获取当前队头元素，但是不弹出，主要用于查看队头元素内容
+
+#### 总结
+
+`LinkedBlockingQueue` 是另外一个比较简单的阻塞队列实现. 内部使用链表来存储元素.
+
+* 首先保存了最大容量与当前容量，用来实现有界队列。
+* 其次保存了头结点和尾节点，用来实现链表保存实际的元素,且方便入队与出队操作
+* 持有两把锁，分别锁队头和队尾，用来保证线程安全
+* 每把锁有对应的等待条件`Condition`，用来休眠/唤醒, 入队和出队的线程，也就是生产者和消费者线程，用来实现线程阻塞及条件满足后的唤醒功能.
+
+由于保存了队头和队尾节点，入队和出队操作的性能都是比较不错的，使用两把锁，分别控制入队和出队的同步控制. 能够最小化锁竞争，提升性能。
+
+与数组实现的`ArrayBlockingQueue`相比，吞吐量会更高一些，但是在高并发的情况下，会有一些不可预测的性能损失.
+
+## SynchronousQueue
+
+### 官方注释翻译
+
+一个阻塞队列的实现，他的插入操作必须等待对应的移除操作. 反之亦然.
+
+一个同步队列没有内部的容量限制. 不能执行`peek()`操作，因此只有当你尝试去移除的时候，元素才存在. 
 
 <br>
 
