--- a/_drafts/com.util.concurent并发包/2021-10-19-Java中的阻塞队列源码学习.md
+++ b/_drafts/com.util.concurent并发包/2021-10-19-Java中的阻塞队列源码学习.md
@@ -988,7 +988,72 @@ private final Condition notFull = putLock.newCondition();
 
 一个阻塞队列的实现，他的插入操作必须等待对应的移除操作. 反之亦然.
 
-一个同步队列没有内部的容量限制. 不能执行`peek()`操作，因此只有当你尝试去移除的时候，元素才存在. 
+一个同步队列没有内部的容量限制.  
+* 不能执行`peek()`操作，因此只有当你尝试去移除的时候，元素才存在. 
+* 在没有其他线程等待移除的时候,你不能使用任何方法来插入一个元素.
+* 不能执行迭代操作,因为没有任何元素可以迭代.
+
+队头元素是第一个尝试添加元素的写入线程;如果没有等待的写入线程,那么没有任何元素可以用来移除,`poll`方法将会返回null.
+
+如果以一个`集合`的视角来看`SynchronousQueue`,那么它是一个空的集合. 这个队列也不接受null元素.
+
+同步队列像是一个合并的渠道. 一个线程中运行的事物,必须同步等待另外一个线程中运行的事务来处理某些信息,比如事件,任务等等.
+
+这个类支持可选的公平策略.默认情况下,是没有任何保证的. 如果构造函数中,指定了使用公平策略,那么会保证线程访问的顺序是FIFO.
+
+这个类也是Java集合框架的一部分.
+
+### 源码
+
+#### 定义
+
+```java
+public class SynchronousQueue<E> extends AbstractQueue<E>
+    implements BlockingQueue<E>, java.io.Serializable {
+```
+
+继承了`AbstractQueue`和`BlockingQueue`,因此是一个阻塞队列.
+
+#### 属性
+
+
+
+#### 内部类 SNode
+
+##### 属性
+```java
+            volatile SNode next;        // next node in stack
+            volatile SNode match;       // the node matched to this
+            volatile Thread waiter;     // to control park/unpark
+            Object item;                // data; or null for REQUESTs
+            int mode;
+```
+
+保存了多个指向`SNode`的指针,下一个节点,与自己匹配的节点,等待线程,以及mode等.
+
+他提供的只要方法是: 
+
+```java
+            boolean tryMatch(SNode s) {
+                if (match == null &&
+                    SMATCH.compareAndSet(this, null, s)) {
+                    Thread w = waiter;
+                    if (w != null) {    // waiters need at most one unpark
+                        waiter = null;
+                        LockSupport.unpark(w);
+                    }
+                    return true;
+                }
+                return match == s;
+            }
+```
+尝试匹配给定的Node和当前node. 如果成功,就唤醒线程.
+
+如果当前节点尚未与任何节点匹配,且CAS执行匹配成功,就唤醒当前节点对应的线程.
+
+#### SynchronousQueue 属性
+
+#### 
 
 <br>
 
