--- a/source/about/3.about.md
+++ b/source/about/3.about.md
@@ -1,11 +1,10 @@
 ---
-title: 关于
-description: 还记得年少时的梦吗
-layout: about
-comments: false
-sidebar: custom
+layout: page
+title: "About"
+description: "还记得年少时的梦吗"
+background-color: "#0a0f23"
+multilingual: true
 ---
-
 <br/>
 <br/>
 <br/>
@@ -32,4 +31,6 @@ QQ:971658291
 <br/>
 Github: <a href="https://github.com/HuBlanker">hublanker</a>  
 <br/>
-CSDN: <a href="https://me.csdn.net/qq_24629159">huyanshi</a> 
+CSDN: <a href="https://me.csdn.net/qq_24629159">huyanshi</a>  
+
+
