feat: spring introduce

--- a/_drafts/spring/简单入门.md
+++ b/_drafts/spring/简单入门.md
@@ -8,18 +8,106 @@ tags:
 
 是的, 毕业五年, 我来学习一下Spring. 之前的工作用的不多,最近开始频繁使用. 简单了解下概念.
 
+因此可能介绍的不是太齐全. 
 
 # 简介 
 
-Spring是什么?
+Spring是什么? 是一个Java框架. 企业级Java应用开发框架. 
+
+也就是说, 一个Java程序, 无论多复杂, 不使用Spring也是可以的. 只是Spring可以为你带来部分便利. 
+
+Spring核心的两大特性, DI, AOP. 
+
+
+# DI 
+
+Dependency Injection. 依赖注入. 一个很玄的名字. 
+
+简单示例:
+
+有两个类, A&B. 其中A依赖B. 持有B的一个实例. 
+
+```java
+    class A {
+        B b;
+
+        public A() {
+            this.b = new B();
+        }
+    }
+
+    class B {
+    }
+
+```
+
+此时, A依赖于B. 在自己的构造方法中, 手动创建了一个B. 是很普通的依赖关系. 
+
+修改代码: 
+
+```java
+    class A {
+        B b;
+
+        public A(B b) {
+            this.b = b;
+        }
+    }
+
+    class B {
+    }
+
+```
+
+A虽然还依赖于B, 但是不再自己手动构造B的实例. 而是由外部调用方, 在调用构造方法时传入. 此时即实现了`依赖注入`. 
+
+这是Spring DI的核心思路. 当然实现时不是这么简单. 有一些扩展点.
+
+* 面向接口 
+
+将B抽象为接口. A只持有B接口, 具体传入哪种实现类,由调用方决定.  实现了在A代码不进行修改的情况下, 通过传入B的实现类不同,A类实现了不同的功能. 
+
+* 自动装配
+
+一个复杂的系统, 类很多. 如果都手动指定依赖关系, 然后根据配置进行依赖注入, 过于麻烦. 因此可以根据类之间的关系, 进行自动装配.
+
+* 容器 
+
+如示例中,实现一个复杂系统, 最终需要一个类, 来管理所有的bean的初始化, 以及相互之间的依赖关系, 以便进行依赖注入. 这部分逻辑过于复杂且与业务无关, 因此spring提供了bean容器, 来进行bean的初始化, 持有这些bean. 并进行对应的注入.
+
+这几个点就不在本文展开.
+
+
+# AOP 
+
+面向切面编程, 是spring的又一大核心内容. 他的核心在于: 对业务逻辑中, 影响多处的功能(安全,日志等), 进行抽取. 以切面的方式来进行实现. 好处:
+
+* 该功能集中于一处. 方面统一的开发, 升级等.
+* 不与业务逻辑混杂, 保持业务逻辑的整洁. 
+
+当定义一个切面后, 可以通过spring注解, 实现在`方法调用链路的多个环节`, 添加自定义的逻辑. 多个环节包括:
+
+* 调用前
+* 调用后
+* 抛出异常时
+* 调用前&调用后.
+
+AOP的介绍, 一般都包括大量的自定义名词, 注解, 运行时逻辑等等, 很容易让人迷惑. 把握住核心原理之后, 一些实现细节就可以慢慢了解,或者在应用时再进行了解了. 这里不再赘述. 
+
+一些扩展点:
+
+* 切面实现原理 
+* 织入逻辑实现, 编译时or运行时?
+* 使用方法, Java代码or注解?
+* 切面粒度, 类or方法or字段or构造器?
 
 
 
-## 前言
 
 
 ## 参考文章
 
+《Spring实战(第四版》
 
 <br>
 
